fixed up to Trial component, audio on iPhone not autoplaying after guess is complete

--- a/client/src/components/experiment/introduction.css
+++ b/client/src/components/experiment/introduction.css
@@ -3,6 +3,9 @@
   object-fit: cover;
   width: 100vw;
   height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
+  background-size: cover;
 }
 
 .button-introduction {
