--- a/client/src/components/experiment/practice.css
+++ b/client/src/components/experiment/practice.css
@@ -1,6 +1,6 @@
 .button-practice {
   position: relative;
-  top: 90vh;
+  top: 2vh;
   display: none;
   height: 60px !important;
 }
